# Nomad2026

./: .gitignore  .gitmodules  BUGFIX_SYNC_CRASHES.md  CLAUDE.md  CMakeLists.txt  MODULE_CHECKLIST.md  README.md  RESEARCH.md  ROADMAP.md  SYNC_IMPLEMENTATION.md  TESTING_INSTRUCTIONS.md  build.sh  jpf-boot-error.txt  run_debug.sh  run_with_logs.sh
.github/workflows/: release.yml  rpi.yml
.superpowers/brainstorm/37042-1775827412/content/: design-colorscheme.html  design-dark-detail.html  design-knob-detail.html  design-knob-flat.html  theme-comparison.html  waiting-2.html
.superpowers/brainstorm/37042-1775827412/state/: server-stopped
data/: classic-theme.xml  modules.xml
docs/superpowers/plans/: 2026-04-11-dark-theme.md  2026-04-15-filter-visual-pass-AB.md
docs/superpowers/specs/: 2026-04-10-dark-theme-design.md  2026-04-15-filter-visual-pass-AB-design.md
source/: Main.cpp  MainComponent.cpp  MainComponent.h
source/format/: ValueFormatters.cpp  ValueFormatters.h
source/help/: ModuleHelpData.cpp  ModuleHelpData.h  ModuleHelpPopup.cpp  ModuleHelpPopup.h
source/midi/: ConnectionManager.cpp  ConnectionManager.h  MidiDeviceManager.cpp  MidiDeviceManager.h  NmMessages.cpp  NmMessages.h  NmProtocol.cpp  NmProtocol.h  SysExCodec.cpp  SysExCodec.h
source/model/: BitStream.h  BitStreamWriter.h  Descriptors.h  IntStream.h  ModuleDescriptions.cpp  ModuleDescriptions.h  Patch.cpp  Patch.h  PatchParser.cpp  PatchParser.h  PatchSerializer.cpp  PatchSerializer.h  PchFileIO.cpp  PchFileIO.h  SignalType.h  SnipFileIO.cpp  SnipFileIO.h  SynthSettings.h  ThemeData.cpp  ThemeData.h
source/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/protocol/: DeleteCableMessage.cpp  DeleteCableMessage.h  DeleteModuleMessage.cpp  DeleteModuleMessage.h  DeletePatchMessage.cpp  DeletePatchMessage.h  KnobAssignmentMessage.cpp  KnobAssignmentMessage.h  MidiCtrlAssignmentMessage.cpp  MidiCtrlAssignmentMessage.h  MorphAssignmentMessage.cpp  MorphAssignmentMessage.h  MorphKeyboardAssignmentMessage.cpp  MorphKeyboardAssignmentMessage.h  MorphRangeChangeMessage.cpp  MorphRangeChangeMessage.h  MoveModuleMessage.cpp  MoveModuleMessage.h  NewCableMessage.cpp  NewCableMessage.h  NewModuleMessage.cpp  NewModuleMessage.h  ParameterEncoder.cpp  ParameterEncoder.h  SetPatchTitleMessage.cpp  SetPatchTitleMessage.h  StorePatchMessage.cpp  StorePatchMessage.h  SysExMessage.cpp  SysExMessage.h
source/sync/: PatchSynchronizer.cpp  PatchSynchronizer.h
source/ui/: ColorScheme.cpp  ColorScheme.h  EditorOptionsDialog.cpp  EditorOptionsDialog.h  FlatCloseButton.h  InspectorPanel.cpp  InspectorPanel.h  MainLayout.cpp  MainLayout.h  MidiSettingsDialog.cpp  MidiSettingsDialog.h  ModuleBrowserPanel.cpp  ModuleBrowserPanel.h  PatchBrowserPanel.cpp  PatchBrowserPanel.h  PatchCanvasComponent.cpp  PatchCanvasComponent.h  PatchHeaderBar.cpp  PatchHeaderBar.h  PatchLocationDialog.cpp  PatchLocationDialog.h  PatchSettingsDialog.cpp  PatchSettingsDialog.h  PresetBrowserWindow.cpp  PresetBrowserWindow.h  QuickAddPopup.cpp  QuickAddPopup.h  StatusBar.cpp  StatusBar.h  SynthSettingsDialog.cpp  SynthSettingsDialog.h
source/undo/: PatchActions.h
